# example-actix-seaorm

./: Cargo.toml  Dockerfile  README.md  curl.md  docker-compose.yml
migration/src/: lib.rs
src/: lib.rs  main.rs  state.rs
src/abstract_trait/: auth.rs  category.rs  comment.rs  post.rs  user.rs
src/config/: jwt.rs  mod.rs
src/domain/request/: category.rs  post.rs  user.rs
src/domain/response/: mod.rs  post.rs  user.rs
src/handler/: auth.rs  category.rs  comment.rs  mod.rs  post.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/repository/: category.rs  comment.rs  posts.rs  user.rs
src/service/: auth.rs  category.rs  comment.rs  posts.rs  user.rs
src/utils/: errors.rs  mod.rs
