[package]
name = "example-crud-blog-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"

tokio = { version = "1.41.0", features = ["full"] }


sea-orm = { version = "1.1.0", features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
] }


serde = { version = "1.0.214", features = ["derive"] }
async-trait = "0.1.83"
thiserror = "1.0.66"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.0"
actix-web = "4.9.0"
serde_json = "1.0.132"
actix-multipart = "0.7.2"


uuid = { version = "1.11.0", features = ["serde", "v4"] }
futures-util = "0.3.31"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
sea-orm-migration = "1.1.0"
